<resources>
    <string name="app_name">Telemprompter</string>
    <string name="ad_unit_id">ca-app-pub-9009667005541754/3150896826</string>
    <string name="help_text">\u2022 When using speech recognition, try to speak loud &amp; clear.\n\n
    \u2022 \"Write Custom Text\" allows you to manually write the text you want to display. You may also save it to a file for future use.\n\n
    \u2022 \"Choose File\" allows you to import a text file to display its content. Use only \".doc\", \".docx\" or \".txt\" files.\n\n
    \u2022 Since this app is under development please be patient if something is not working &amp; feel free to contact me &amp; suggest changes.\n\n
        \u2022 To use speed recognition offline, you should have the language installed on your device. Look for \"OK Google\" settings.
        \u2022 Use speed recognition with network connection for better performance.
    </string>
    <string name="zero_state_string">Oops!!! Nothing here</string>
    <string name="scroll_speed_label">Scroll speed</string>
    <string name="text_size_label">Text Size</string>
    <string name="enter_title_help_string">Enter Title of Note</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="help_label">Help</string>
    <string name="add_your_note_here_help_string">Add your note here</string>
    <string name="start_mic_button_text">Start Mic</string>
    <string name="fab_add_new_note_string">Add New Note</string>
    <string name="fab_choose_existing_note_string">Choose Existing Note</string>
    <string name="fab_settings_string">Settings</string>
    <string name="start_stop_button_string">Stop</string>
    <string name="save_note_button_string">Save Note</string>
    <string name="problem_retrieving_data">Problem retrieving data</string>
    <string name="done">Done!</string>
    <string name="error_getting_content">Error getting content</string>
    <string name="error_in_creating_folder">Error in creating folder</string>
    <string name="folder_created">"Folder created : "</string>
    <string name="title_empty_warning">Title cannot be empty</string>
    <string name="text_empty_warning">Text cannot be empty</string>
    <string name="error_creating_file_content">Error while trying to create new file contents</string>
    <string name="error_creating_file">Error while trying to create the file</string>
    <string name="created_file">"Created a file: "</string>
    <string name="error_opening_file">Error in opening file</string>
    <string name="speed_not_supported">Speech not supported</string>
    <string name="file_written">File has been written!</string>
    <string name="file_writing_failed">File has Failed</string>

    <string name="add_new_title">Add New Note</string>
    <string name="choose_existing_title">Choose Existing</string>
    <string name="settings_title">Settings</string>
    <string name="help_title">Help</string>
    <string name="unable_to_resolve">Unable to resolve</string>
</resources>
